# todo-tui

./: Cargo.toml  LICENSE  README.md  config.example.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
src/: app.rs  main.rs
src/error/: mod.rs
src/events/: event.rs  handler.rs  mod.rs  sender.rs  task.rs
src/events/tools/: todo.rs
src/input/: key_bindings.rs  key_context.rs  key_event_map.rs  mod.rs
src/persistence/: mod.rs
src/state/: app.rs  todo.rs
src/sync/: auth.rs  config.rs  drive.rs  mod.rs  task.rs
src/ui/: layout.rs  mod.rs  styles.rs
src/ui/widgets/: conflict.rs  content.rs  footer.rs  header.rs  mod.rs  popup.rs
