[package]
name = "todo-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
color-eyre = "0.6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
